--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,8 @@
   "version": 2,
   "name": "formularios-la-tata",
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "styles.css", "use": "@vercel/static" },
+    { "src": "script.js", "use": "@vercel/static" }
   ]
 }
